manifests/7_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prombench-9-prometheus-meta
  namespace: prombench-9
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: prometheus-meta
          servicePort: 9090
        path: /prombench-9/prometheus-meta/        
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prombench-9-grafana
  namespace: prombench-9
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /prombench-9/grafana/
